--- a/src/output.css
+++ b/src/output.css
@@ -593,6 +593,10 @@ html {
   border-width: 0;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
 }
@@ -605,12 +609,24 @@ html {
   top: 0px;
 }
 
+.top-full{
+  top: 100%;
+}
+
+.right-0{
+  right: 0px;
+}
+
 .flex{
   display: flex;
 }
 
 .table{
   display: table;
+}
+
+.hidden{
+  display: none;
 }
 
 .h-full{
@@ -659,12 +675,31 @@ html {
   gap: 0.5rem;
 }
 
+.whitespace-nowrap{
+  white-space: nowrap;
+}
+
+.rounded-b{
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-b-md{
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
 .border{
   border-width: 1px;
 }
 
 .border-none{
   border-style: none;
+}
+
+.bg-pink-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r{
@@ -687,6 +722,10 @@ html {
 
 .p-4{
   padding: 1rem;
+}
+
+.text-right{
+  text-align: right;
 }
 
 .font-bold{
@@ -740,7 +779,24 @@ html {
   background-color: rgb(255 255 255 / 0.1);
 }
 
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white\/5:hover{
+  background-color: rgb(255 255 255 / 0.05);
+}
+
 .hover\:text-zinc-200:hover{
   --tw-text-opacity: 1;
   color: rgb(228 228 231 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:block{
+  display: block;
+}
+
+.group:hover .group-hover\:hidden{
+  display: none;
 }
