--- a/src/output.css
+++ b/src/output.css
@@ -593,6 +593,10 @@ html {
   border-width: 0;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -603,6 +607,10 @@ html {
 
 .sticky{
   position: sticky;
+}
+
+.-top-8{
+  top: -2rem;
 }
 
 .left-0{
@@ -617,12 +625,25 @@ html {
   top: 0px;
 }
 
+.top-24{
+  top: 6rem;
+}
+
 .top-\[62px\]{
   top: 62px;
 }
 
 .top-full{
   top: 100%;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .my-1{
@@ -635,11 +656,6 @@ html {
   margin-bottom: auto;
 }
 
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -648,28 +664,32 @@ html {
   margin-left: auto;
 }
 
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mt-\[-70px\]{
-  margin-top: -70px;
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .mt-20{
   margin-top: 5rem;
 }
 
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .mt-4{
   margin-top: 1rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
+.mt-\[-70px\]{
+  margin-top: -70px;
 }
 
 .block{
   display: block;
+}
+
+.inline-block{
+  display: inline-block;
 }
 
 .flex{
@@ -704,6 +724,10 @@ html {
   height: 1rem;
 }
 
+.h-80{
+  height: 20rem;
+}
+
 .h-\[calc\(100vh-200px\)\]{
   height: calc(100vh - 200px);
 }
@@ -712,16 +736,16 @@ html {
   height: 100%;
 }
 
-.h-80{
-  height: 20rem;
-}
-
 .min-h-\[400px\]{
   min-height: 400px;
 }
 
 .w-1{
   width: 0.25rem;
+}
+
+.w-12{
+  width: 3rem;
 }
 
 .w-14{
@@ -734,18 +758,6 @@ html {
 
 .w-full{
   width: 100%;
-}
-
-.min-w-\[\]{
-  min-width: ;
-}
-
-.min-w-\[80\]{
-  min-width: 80;
-}
-
-.min-w-\[805\]{
-  min-width: 805;
 }
 
 .min-w-\[80\%\]{
@@ -840,6 +852,10 @@ html {
   overflow-x: auto;
 }
 
+.scroll-smooth{
+  scroll-behavior: smooth;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -859,6 +875,11 @@ html {
 .rounded-b-md{
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
+}
+
+.rounded-l-lg{
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 
 .border{
@@ -900,6 +921,11 @@ html {
 .bg-zinc-200{
   --tw-bg-opacity: 1;
   background-color: rgb(228 228 231 / var(--tw-bg-opacity));
+}
+
+.bg-zinc-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r{
@@ -946,12 +972,12 @@ html {
   padding-bottom: 0.5rem;
 }
 
-.pr-4{
-  padding-right: 1rem;
-}
-
 .pb-5{
   padding-bottom: 1.25rem;
+}
+
+.pr-4{
+  padding-right: 1rem;
 }
 
 .text-center{
@@ -960,6 +986,11 @@ html {
 
 .text-right{
   text-align: right;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-5xl{
@@ -995,6 +1026,11 @@ html {
   color: rgb(228 228 231 / var(--tw-text-opacity));
 }
 
+.text-zinc-900{
+  --tw-text-opacity: 1;
+  color: rgb(24 24 27 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -1017,21 +1053,10 @@ html {
   opacity: 1;
 }
 
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-black{
-  --tw-shadow-color: #000;
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .shadow-black\/20{
@@ -1150,6 +1175,34 @@ html {
   display: block;
 }
 
+.dark\:inline:is(.dark *){
+  display: inline;
+}
+
+.dark\:hidden:is(.dark *){
+  display: none;
+}
+
+.dark\:bg-zinc-200:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 228 231 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-zinc-900:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+}
+
+.dark\:text-zinc-200:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-text-opacity));
+}
+
+.dark\:text-zinc-900:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(24 24 27 / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px){
   .md\:flex{
     display: flex;
@@ -1157,14 +1210,6 @@ html {
 
   .md\:hidden{
     display: none;
-  }
-
-  .md\:min-w-\[\]{
-    min-width: ;
-  }
-
-  .md\:min-w-\[40\]{
-    min-width: 40;
   }
 
   .md\:min-w-\[40\%\]{
