--- a/src/output.css
+++ b/src/output.css
@@ -637,6 +637,14 @@ html {
   top: 100%;
 }
 
+.left-1{
+  left: 0.25rem;
+}
+
+.left-1\/2{
+  left: 50%;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -680,12 +688,28 @@ html {
   margin-top: 1rem;
 }
 
+.mt-5{
+  margin-top: 1.25rem;
+}
+
 .mt-\[-70px\]{
   margin-top: -70px;
 }
 
-.mt-5{
-  margin-top: 1.25rem;
+.ml-\[\]{
+  margin-left: ;
+}
+
+.ml-\[-\]{
+  margin-left: -;
+}
+
+.ml-\[-8p\]{
+  margin-left: -8p;
+}
+
+.ml-\[-8px\]{
+  margin-left: -8px;
 }
 
 .block{
@@ -740,6 +764,14 @@ html {
   height: 100%;
 }
 
+.h-\[250\]{
+  height: 250;
+}
+
+.h-\[250px\]{
+  height: 250px;
+}
+
 .min-h-\[400px\]{
   min-height: 400px;
 }
@@ -764,6 +796,10 @@ html {
   width: 100%;
 }
 
+.w-4{
+  width: 1rem;
+}
+
 .min-w-\[80\%\]{
   min-width: 80%;
 }
@@ -782,6 +818,10 @@ html {
 
 .grow{
   flex-grow: 1;
+}
+
+.caption-bottom{
+  caption-side: bottom;
 }
 
 .border-collapse{
@@ -880,6 +920,14 @@ html {
   border-radius: 0.75rem;
 }
 
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .rounded-b-md{
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -941,8 +989,17 @@ html {
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 
+.bg-zinc-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-b{
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .from-rose-500{
@@ -951,8 +1008,28 @@ html {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-sky-900{
+  --tw-gradient-from: #0c4a6e var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(12 74 110 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-pink-500{
+  --tw-gradient-to: rgb(236 72 153 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #ec4899 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.via-cyan-900{
+  --tw-gradient-to: rgb(22 78 99 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #164e63 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
 .to-pink-500{
   --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
+}
+
+.to-teal-900{
+  --tw-gradient-to: #134e4a var(--tw-gradient-to-position);
 }
 
 .bg-cover{
@@ -971,12 +1048,17 @@ html {
   padding: 0.5rem;
 }
 
+.p-3{
+  padding: 0.75rem;
+}
+
 .p-4{
   padding: 1rem;
 }
 
-.p-3{
-  padding: 0.75rem;
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4{
@@ -989,9 +1071,14 @@ html {
   padding-bottom: 0.5rem;
 }
 
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-5{
@@ -1128,6 +1215,10 @@ html {
 
 .animation-delay-300{
   animation-delay: 300ms;
+}
+
+.caption-bottom{
+  caption-side: bottom;
 }
 
 .hover\:bg-sky-900:hover{
