--- a/src/output.css
+++ b/src/output.css
@@ -617,12 +617,20 @@ html {
   left: 0px;
 }
 
+.left-1\/2{
+  left: 50%;
+}
+
 .right-0{
   right: 0px;
 }
 
 .top-0{
   top: 0px;
+}
+
+.top-1\/2{
+  top: 50%;
 }
 
 .top-24{
@@ -635,14 +643,6 @@ html {
 
 .top-full{
   top: 100%;
-}
-
-.left-1{
-  left: 0.25rem;
-}
-
-.left-1\/2{
-  left: 50%;
 }
 
 .z-10{
@@ -659,9 +659,18 @@ html {
   margin-bottom: 0.25rem;
 }
 
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-auto{
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.-ml-\[8px\]{
+  margin-left: -8px;
 }
 
 .mb-5{
@@ -696,22 +705,6 @@ html {
   margin-top: -70px;
 }
 
-.ml-\[\]{
-  margin-left: ;
-}
-
-.ml-\[-\]{
-  margin-left: -;
-}
-
-.ml-\[-8p\]{
-  margin-left: -8p;
-}
-
-.ml-\[-8px\]{
-  margin-left: -8px;
-}
-
 .block{
   display: block;
 }
@@ -726,6 +719,10 @@ html {
 
 .table{
   display: table;
+}
+
+.grid{
+  display: grid;
 }
 
 .hidden{
@@ -764,14 +761,6 @@ html {
   height: 100%;
 }
 
-.h-\[250\]{
-  height: 250;
-}
-
-.h-\[250px\]{
-  height: 250px;
-}
-
 .min-h-\[400px\]{
   min-height: 400px;
 }
@@ -788,16 +777,16 @@ html {
   width: 3.5rem;
 }
 
+.w-4{
+  width: 1rem;
+}
+
 .w-8{
   width: 2rem;
 }
 
 .w-full{
   width: 100%;
-}
-
-.w-4{
-  width: 1rem;
 }
 
 .min-w-\[80\%\]{
@@ -856,6 +845,17 @@ html {
   animation: wavey 1000ms linear infinite;
 }
 
+@keyframes ping{
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping{
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
@@ -866,6 +866,10 @@ html {
 
 .snap-center{
   scroll-snap-align: center;
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -896,6 +900,10 @@ html {
   gap: 1rem;
 }
 
+.gap-8{
+  gap: 2rem;
+}
+
 .overflow-x-auto{
   overflow-x: auto;
 }
@@ -912,20 +920,16 @@ html {
   border-radius: 9999px;
 }
 
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .rounded-sm{
   border-radius: 0.125rem;
 }
 
 .rounded-xl{
   border-radius: 0.75rem;
-}
-
-.rounded{
-  border-radius: 0.25rem;
-}
-
-.rounded-lg{
-  border-radius: 0.5rem;
 }
 
 .rounded-b-md{
@@ -975,6 +979,11 @@ html {
   background-color: rgb(236 72 153 / var(--tw-bg-opacity));
 }
 
+.bg-rose-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 63 94 / var(--tw-bg-opacity));
+}
+
 .bg-white\/30{
   background-color: rgb(255 255 255 / 0.3);
 }
@@ -984,22 +993,22 @@ html {
   background-color: rgb(228 228 231 / var(--tw-bg-opacity));
 }
 
-.bg-zinc-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}
-
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-r{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+.bg-zinc-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-r{
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-rose-500{
@@ -1012,11 +1021,6 @@ html {
   --tw-gradient-from: #0c4a6e var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(12 74 110 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.via-pink-500{
-  --tw-gradient-to: rgb(236 72 153 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #ec4899 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .via-cyan-900{
@@ -1056,6 +1060,11 @@ html {
   padding: 1rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1074,11 +1083,6 @@ html {
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .pb-5{
@@ -1135,6 +1139,11 @@ html {
   color: rgb(228 228 231 / var(--tw-text-opacity));
 }
 
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
@@ -1160,6 +1169,14 @@ html {
 
 .opacity-100{
   opacity: 1;
+}
+
+.opacity-45{
+  opacity: 0.45;
+}
+
+.opacity-75{
+  opacity: 0.75;
 }
 
 .shadow-md{
